# dummy-core-rust

./: Cargo.toml
src/: main.rs  runtime.rs  scheduler.rs  state.rs
src/behavior/: engine.rs  mod.rs  snapshot.rs
src/intent/: engine.rs  mod.rs  state.rs
src/patterns/: engine.rs  event.rs  mod.rs
src/sensors/: event.rs  input.rs  keyboard.rs  mod.rs  mouse.rs  simulation.rs  window.rs
